--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "dependencies": {
     "date-fns": "^2.14.0",
     "gatsby": "^2.23.12",
-    "gatsby-image": "^2.4.9",
+    "gatsby-image": "^2.4.12",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-sharp": "^2.5.7",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-transformer-json": "^2.4.10",
+    "gatsby-transformer-sharp": "^2.5.10",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
